# RISCV-Emulator

./: CMakeLists.txt  README.md
binaries/: fib  fib.c  hello  hello.c  loop  loop.c  simple.s
src/core/: cpu.cpp  cpu.h  decoder.cpp  decoder.h  elf_loader.cpp  elf_loader.h  interpreter.cpp  interpreter.h  profiler.cpp  profiler.h
src/jit/: arm64_assembler.cpp  arm64_assembler.h  code_buffer.h  jit_compiler.cpp  jit_compiler.h
tests/: test_cpu.cpp  test_debug.cpp  test_elf.cpp  test_interpreter.cpp  test_jit_basic.cpp  test_jit_riscv.cpp  test_profile.cpp
